--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -18,9 +18,13 @@
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.2",
+    "firebase-functions-test": "^0.2.0",
+    "jest": "^26.0.1",
+    "moq.ts": "^6.3.1",
+    "ts-jest": "^26.0.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^3.9.2"
   },
   "private": true
 }
