--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/language-service": "~9.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^25.2.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
@@ -43,8 +44,9 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "moq.ts": "^6.3.1",
     "protractor": "~5.4.3",
+    "ts-jest": "^26.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.9.2"
   }
 }
