--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "jsx": "react",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
